# Cog

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .hgignore  .hgtags  .travis.yml  AboutCog.jp2  AppController.h  AppController.m  CODE_OF_CONDUCT.md  COMPILE  Changelog  Cog-Bridging-Header.h  Cog.entitlements  Cog.q1.json  Cog.scriptSuite  Cog.scriptTerminology  Cog.sdef  CogMCP.entitlements  Cog_Prefix.pch  Controller.h  Controller.m  Converter.h  Converter.m  Credits.html  DBLog.c  DBLog.h  GeneralUserGS-Drums.sf3  GoogleService-Info.plist  Info.plist  Info.plist.template  InfoPlist.xcstrings  InfoView.h  InputController.h  InputController.m  KnownIssues  Localizable.xcstrings  NSArray+CogSort.h  NSString+CogSort.m  (+46 more)
Audio/: Helper.h  (+27 more)
Frameworks/GME/gme/: Ay_Apu.cpp  Ay_Apu.h  Ay_Core.cpp  Ay_Core.h  Ay_Cpu.cpp  Ay_Cpu.h  Ay_Emu.cpp  Ay_Emu.h  Blip_Buffer.h  Bml_Parser.cpp  Bml_Parser.h  C140_Emu.cpp  C140_Emu.h  CMakeLists.txt  Classic_Emu.cpp  Classic_Emu.h  Data_Reader.cpp  Data_Reader.h  Downsampler.cpp  Downsampler.h  Dual_Resampler.cpp  Dual_Resampler.h  Effects_Buffer.cpp  Effects_Buffer.h  Fir_Resampler.cpp  Fir_Resampler.h  Gb_Apu.cpp  Gb_Apu.h  Gb_Cpu.cpp  Gb_Cpu.h  Gb_Cpu_run.h  Gb_Oscs.cpp  Gb_Oscs.h  Gbs_Core.cpp  Gbs_Core.h  Gbs_Cpu.cpp  Gbs_Emu.cpp  Gbs_Emu.h  Gme_File.cpp  Gme_File.h  (+152 more)
Frameworks/GME/gme/higan/: smp.cpp  smp.hpp
Frameworks/GME/gme/higan/dsp/: SPC_DSP.cpp  SPC_DSP.h  dsp.cpp  dsp.hpp
Frameworks/GME/gme/higan/processor/spc700/: disassembler.cpp  spc700.cpp  spc700.hpp
Frameworks/GME/gme/higan/smp/: memory.cpp  smp.cpp  smp.hpp  timing.cpp
Frameworks/MAC/mac-src/src/MACLib/: APECompressCreate.cpp  APEDecompress.cpp  APEDecompress.h  APEHeader.cpp  APEInfo.cpp  APEInfo.h  APESimple.cpp  MACLib.h  MACProgressHelper.cpp  MD5.cpp  MD5.h  Makefile.am  NNFilter.cpp  NewPredictor.cpp  Prepare.cpp  UnBitArray.cpp  UnBitArrayBase.cpp  WAVInputSource.cpp
Frameworks/MAC/mac-src/src/MACLib/Assembly/: Makefile.in
Frameworks/MAC/mac-src/src/MACLib/Old/: APEDecompressCore.cpp  APEDecompressCore.h  APEDecompressOld.cpp  APEDecompressOld.h  Anti-Predictor.cpp  Anti-Predictor.h  AntiPredictorExtraHigh.cpp  AntiPredictorHigh.cpp  UnBitArrayOld.cpp  UnMAC.cpp
Frameworks/OpenMPT/OpenMPT/contrib/libmodplug-0.8.9.0/: LICENSE  Makefile.am  clean.sh  config.h.in  configure.ac  libmodplug.pc.in  libopenmpt_modplug.c  libopenmpt_modplug_cpp.cpp
Frameworks/OpenMPT/OpenMPT/contrib/libmodplug-0.8.9.0/libmodplug/: modplug.h
Frameworks/Shorten/Files/: ChangeLog  Makefile.am  NEWS  README  configure.ac
Frameworks/Shorten/Files/shorten/doc/xmms-shn/: CREDITS  README
Frameworks/Shorten/Files/shorten/include/: ringbuffer.h  shn_reader.h  shorten.h
Frameworks/Shorten/Files/shorten/src/: Makefile.am  array.cpp  convert.c  id3v2.c  output.c  ringbuffer.cpp  shn_reader.cpp  vario.c
Frameworks/Shorten/Files/src/: Makefile.am  libinputshorten.c
Frameworks/libsidplay/sidplay-residfp-code/libsidplayfp/: Doxyfile.in  Makefile.am  TODO  configure.ac  libsidplayfp.pc.in
Frameworks/libsidplay/sidplay-residfp-code/libsidplayfp/src/: EventCallback.h  EventScheduler.h  SidInfoImpl.h  mixer.h  player.cpp  player.h  psiddrv.cpp  reloc65.cpp  reloc65.h  romCheck.h  sidcxx11.h  sidemu.h  sidendian.h  sidmd5.h
Frameworks/libsidplay/sidplay-residfp-code/libsidplayfp/src/c64/: c64cia.h  c64cpu.h  c64env.h  c64sid.h  c64vic.h  mmu.h
Frameworks/libsidplay/sidplay-residfp-code/libsidplayfp/src/sidplayfp/: SidConfig.cpp  SidInfo.cpp  SidTune.cpp  SidTune.h  SidTuneInfo.cpp  sidbuilder.h  sidplayfp.cpp  sidversion.h
Frameworks/libsidplay/sidplay-residfp-code/libsidplayfp/src/sidtune/: MUS.cpp  MUS.h  PSID.cpp  PSID.h  SidTuneBase.cpp  SidTuneBase.h  SidTuneCfg.h  SidTuneInfoImpl.h  SidTuneTools.cpp  SmartPtr.h  p00.cpp  p00.h  prg.h  sidplayer2.a65
Frameworks/libsidplay/sidplay-residfp-code/libsidplayfp/src/utils/: SidDatabase.cpp  SidDatabase.h  iMd5.h  iniParser.cpp  iniParser.h  md5Factory.cpp  md5Gcrypt.h  md5Internal.h
Frameworks/libsidplay/sidplay-residfp-code/libsidplayfp/test/: test.cpp
Frameworks/libsidplay/sidplay-residfp-code/libsidplayfp/tests/: Makefile.am  TestDac.cpp
Libraries/MAC/mac-src/: AUTHORS  ChangeLog  INSTALL  Makefile.in  NEWS  README  TODO  configure.in
Libraries/MAC/mac-src/src/: History.txt  License.htm  Makefile.am  Readme.htm
Libraries/MAC/mac-src/src/Console/: Console.cpp  Makefile.in
Libraries/MAC/mac-src/src/Examples/: Makefile.am  Makefile.in
Libraries/MAC/mac-src/src/Examples/Analyze/: Makefile.in
Libraries/MAC/mac-src/src/MACLib/: APEInfo.cpp  APELink.cpp  APESimple.cpp  APETag.cpp  BitArray.cpp  MACLib.cpp  MACLib.h  MACProgressHelper.h  Makefile.in  MultichannelNNFilter.h  NNFilter.cpp  NNFilter.h  Prepare.cpp  WAVInputSource.h
Libraries/MAC/mac-src/src/MACLib/Assembly/: Makefile.am  common.cpp
Libraries/MAC/mac-src/src/MACLib/Old/: APEDecompressOld.h  AntiPredictorExtraHigh.cpp  AntiPredictorFast.cpp  AntiPredictorNormal.cpp  Makefile.am  Makefile.in  UnBitArrayOld.h  UnMAC.cpp  UnMAC.h
Libraries/MAC/mac-src/src/Shared/: APEInfoDialog.cpp  APEInfoDialog.h  CharacterHelper.cpp  CircleBuffer.h  GlobalFunctions.cpp  GlobalFunctions.h  ID3Genres.h  MACUtils.cpp  MACUtils.h  Makefile.am  Makefile.in  NoWindows.h  SmartPtr.h  StdLibFileIO.h  StdString.h  WAVInfoDialog.cpp  WinFileIO.cpp  WinFileIO.h
Libraries/TagLib/Files/: Makefile.am  Makefile.in
Libraries/TagLib/Files/taglib/ape/: Makefile.in
Libraries/TagLib/Files/taglib/flac/: Makefile.in
Libraries/TagLib/Files/taglib/mpc/: Makefile.in
Libraries/TagLib/Files/taglib/mpeg/: Makefile.in
Libraries/TagLib/Files/taglib/mpeg/id3v1/: Makefile.in  id3v1tag.h
Libraries/TagLib/Files/taglib/mpeg/id3v2/: Makefile.in  id3v2.4.0-frames.txt
Libraries/TagLib/Files/taglib/ogg/: Makefile.in
Libraries/TagLib/Files/taglib/ogg/flac/: Makefile.in
Libraries/TagLib/Files/taglib/toolkit/: Makefile.in
Libraries/WavPack/Files/: ChangeLog  Makefile.am  README  configure.ac  extra1.c  extra2.c  float.c  pack.c  wavpack.c  wavpack.h  wputils.c  wputils.h  wvunpack.c
(+5596 files in other folders)
